--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
 
     <!-- Script for loading images -->
     <script>
-        const jsonUrl = "https://raw.githubusercontent.com/username/repo/branch/images.json";
+        const jsonUrl = "https://raw.githubusercontent.com/gpiasiatel/gpiasiatel.github.io/refs/heads/main/7photo/images.json";
 
         async function loadImages() {
             try {
