--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
         }
 
         async function loadImages() {
-            const jsonUrl = "https://raw.githubusercontent.com/gpiasiatel/gpiasiatel.github.io/refs/heads/main/7photo/images.json";
+            const jsonUrl = "https://raw.githubusercontent.com/gpiasiatel/gpiasiatel.github.io/refs/heads/main/7photo/work%20images.json";
             try {
                 const res = await fetch(jsonUrl);
                 const data = await res.json();
