--- a/index.html
+++ b/index.html
@@ -204,6 +204,12 @@
         </div>
 
         <!-- ✅ Smooth Continuous Infinite Slider -->
+        <div class="mt-10">
+    <div class="flex justify-center">
+        <div class="bg-green-600 text-white px-6 py-3 rounded-lg shadow-md text-center text-2xl font-bold">
+            Our Works
+        </div>
+    </div>
         <div id="imageGridWrapper" class="overflow-hidden mt-10">
             <div id="imageGrid" class="slider">
                 <!-- Images will be injected here -->
