--- a/result.html
+++ b/result.html
@@ -5,7 +5,13 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>সার্টিফিকেট ফলাফল</title>
 <style>
-  body { font-family: 'SolaimanLipi', sans-serif; background: #f4f6f8; margin: 0; padding: 20px; text-align:center; }
+  body { 
+    font-family: 'SolaimanLipi', sans-serif; 
+    background: #f4f6f8; 
+    margin: 0; 
+    padding: 20px; 
+    text-align:center; 
+  }
   a { color: #2980b9; text-decoration: none; }
   a:hover { text-decoration: underline; }
   #loader { text-align: center; padding: 50px; font-size: 20px; color: #555; }
@@ -16,19 +22,41 @@
     margin: 0 auto;
     background: #fff;
     border-radius: 15px;
-    box-shadow: 0 10px 25px rgba(0,0,0,0.15);
+    box-shadow: 0 12px 30px rgba(0,0,0,0.2);
     overflow: hidden;
-    padding-bottom: 30px;
+    padding-bottom: 40px;
     position: relative;
   }
 
+  /* Watermark */
+  .certificate-container::before {
+    content: "";
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    width: 400px;
+    height: 400px;
+    transform: translate(-50%, -50%);
+    background-image: url('https://raw.githubusercontent.com/gpiasiatel/gpiasiatel/main/foldername/WhatsApp_Image_2025-08-28_at_3.14.15_PM-removebg-preview.png');
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: contain;
+    opacity: 0.12;
+    z-index: 0;
+  }
+
+  .certificate-container > * { position: relative; z-index: 1; }
+
   .cert-header { background-color: #2c3e50; padding: 20px; text-align: center; }
   .company-logo { max-height: 80px; object-fit: contain; }
+
   .cert-body { display: flex; align-items: center; padding: 30px 20px; gap: 20px; flex-wrap: wrap; }
   .profile-picture-container { flex: 0 0 150px; text-align: center; }
   .profile-picture { width: 150px; height: 150px; border-radius: 50%; object-fit: cover; border: 3px solid #2980b9; }
+
   .person-info { flex: 1; text-align:left; }
-  .person-info .name { font-size: 28px; margin: 0; color: #2c3e50; }
+
+  .person-info .name { font-size: 28px; margin: 0; color: #2c3e50; font-weight: bold; }
   .person-info .designation { font-size: 20px; margin: 5px 0; color: #2980b9; }
   .person-info .company { font-size: 18px; color: #555; }
 
@@ -37,39 +65,13 @@
   .detail-key { font-weight: bold; color: #34495e; }
   .detail-value { color: #2c3e50; }
 
-  .cert-footer {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    margin: 20px;
-    padding: 10px 20px;
-    color: #7f8c8d;
-    font-size: 14px;
-    position: relative;
-    z-index: 1;
-  }
+  .cert-footer { display: flex; justify-content: space-between; align-items: center; margin: 20px; padding: 10px 20px; color: #7f8c8d; font-size: 14px; }
   .qr-code { width: 80px; height: 80px; }
   .reg-number { font-weight: bold; font-size: 16px; color: #2c3e50; }
 
   @media print {
     body { background-color: #fff; }
     .certificate-container { box-shadow: none; margin: 0; }
-    .certificate-container::before {
-      content: "";
-      position: absolute;
-      top: 50%;
-      left: 50%;
-      width: 400px;
-      height: 400px;
-      transform: translate(-50%, -50%);
-      background-image: url('https://raw.githubusercontent.com/gpiasiatel/gpiasiatel/main/foldername/WhatsApp_Image_2025-08-28_at_3.14.15_PM-removebg-preview.png');
-      background-repeat: no-repeat;
-      background-position: center;
-      background-size: contain;
-      opacity: 0.1;
-      z-index: 0;
-    }
-    .certificate-container > * { position: relative; z-index: 1; }
     #loader, .not-found { display: none; }
   }
 
@@ -94,7 +96,6 @@
 </div>
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/qrcodejs/1.0.0/qrcode.min.js"></script>
-
 <script>
 document.addEventListener('DOMContentLoaded', function() {
     const GITHUB_DATA_URL = 'https://raw.githubusercontent.com/gpiasiatel/gpiasiatel/main/foldername/data.json';
@@ -113,21 +114,14 @@ document.addEventListener('DOMContentLoaded', function() {
 
     fetch(GITHUB_DATA_URL)
       .then(response => {
-        if (!response.ok) {
-            throw new Error('Network response was not ok ' + response.statusText);
-        }
+        if (!response.ok) throw new Error('Network response was not ok ' + response.statusText);
         return response.json();
       })
       .then(data => {
         const person = data.find(item => item.registration_number && item.registration_number.toLowerCase() === regNumber.toLowerCase());
         loader.style.display = 'none';
-
-        if (person) {
-            displayCertificate(person);
-        } else {
-            certificateContainer.style.display = 'none';
-            notFound.style.display = 'block';
-        }
+        if (person) displayCertificate(person);
+        else { certificateContainer.style.display = 'none'; notFound.style.display = 'block'; }
       })
       .catch(error => {
         console.error('Fetch Error:', error);
@@ -139,11 +133,7 @@ document.addEventListener('DOMContentLoaded', function() {
         let detailsHtml = '';
         if (person.details) {
             for (const key in person.details) {
-                detailsHtml += `
-                  <div class="detail-item">
-                    <span class="detail-key">${key}</span>
-                    <span class="detail-value">${person.details[key]}</span>
-                  </div>`;
+                detailsHtml += `<div class="detail-item"><span class="detail-key">${key}</span><span class="detail-value">${person.details[key]}</span></div>`;
             }
         }
 
@@ -161,20 +151,14 @@ document.addEventListener('DOMContentLoaded', function() {
               <p class="company">${person.company || 'N/A'}</p>
             </div>
           </main>
-          <section class="cert-details">
-            ${detailsHtml}
-          </section>
+          <section class="cert-details">${detailsHtml}</section>
           <footer class="cert-footer">
             <div class="reg-number">রেজিস্ট্রেশন নম্বর: ${person.registration_number || 'N/A'}</div>
             <div id="qrcode" class="qr-code"></div>
           </footer>
         `;
 
-        new QRCode(document.getElementById("qrcode"), {
-            text: window.location.href,
-            width: 80,
-            height: 80
-        });
+        new QRCode(document.getElementById("qrcode"), { text: window.location.href, width: 80, height: 80 });
     }
 });
 </script>
