--- a/result.html
+++ b/result.html
@@ -5,82 +5,101 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>সার্টিফিকেট ফলাফল</title>
 <style>
-  body { 
-    font-family: 'SolaimanLipi', sans-serif; 
-    background: #f4f6f8; 
-    margin: 0; 
-    padding: 20px; 
-    text-align:center; 
-  }
-  a { color: #2980b9; text-decoration: none; }
-  a:hover { text-decoration: underline; }
-  #loader { text-align: center; padding: 50px; font-size: 20px; color: #555; }
-  .not-found { text-align: center; padding: 50px; color: #e74c3c; }
+body { 
+  font-family: 'SolaimanLipi', sans-serif; 
+  background: #f4f6f8; 
+  margin: 0; 
+  padding: 20px; 
+  text-align:center; 
+}
+a { color: #2980b9; text-decoration: none; }
+a:hover { text-decoration: underline; }
+#loader { text-align: center; padding: 50px; font-size: 20px; color: #555; }
+.not-found { text-align: center; padding: 50px; color: #e74c3c; }
 
-  .certificate-container {
-    max-width: 900px;
-    margin: 0 auto;
-    background: #fff;
-    border-radius: 15px;
-    box-shadow: 0 12px 30px rgba(0,0,0,0.2);
-    overflow: hidden;
-    padding-bottom: 40px;
-    position: relative;
-  }
+.certificate-container {
+  max-width: 900px;
+  margin: 0 auto;
+  background: #fff;
+  border-radius: 15px;
+  box-shadow: 0 12px 30px rgba(0,0,0,0.2);
+  overflow: hidden;
+  padding-bottom: 40px;
+  position: relative;
+}
 
-  /* Watermark */
+/* Screen watermark */
+.certificate-container::before {
+  content: "";
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  width: 500px;
+  height: 500px;
+  transform: translate(-50%, -50%) rotate(-15deg);
+  background-image: url('https://raw.githubusercontent.com/gpiasiatel/gpiasiatel/main/foldername/WhatsApp_Image_2025-08-28_at_3.14.15_PM-removebg-preview.png');
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: contain;
+  opacity: 0.08;
+  filter: blur(1px);
+  z-index: 0;
+}
+
+.certificate-container > * { position: relative; z-index: 1; }
+
+.cert-header { background-color: #2c3e50; padding: 20px; text-align: center; }
+.company-logo { max-height: 80px; object-fit: contain; }
+
+.cert-body { display: flex; align-items: center; padding: 30px 20px; gap: 20px; flex-wrap: wrap; }
+.profile-picture-container { flex: 0 0 150px; text-align: center; }
+.profile-picture { width: 150px; height: 150px; border-radius: 50%; object-fit: cover; border: 3px solid #2980b9; }
+
+.person-info { flex: 1; text-align:left; }
+.person-info .name { font-size: 28px; margin: 0; color: #2c3e50; font-weight: bold; }
+.person-info .designation { font-size: 20px; margin: 5px 0; color: #2980b9; }
+.person-info .company { font-size: 18px; color: #555; }
+
+.cert-details { margin: 20px; padding: 10px; }
+.detail-item { padding: 10px 0; border-bottom: 1px dashed #bdc3c7; font-size: 16px; display:flex; justify-content:space-between; }
+.detail-key { font-weight: bold; color: #34495e; }
+.detail-value { color: #2c3e50; }
+
+.cert-footer { display: flex; justify-content: space-between; align-items: center; margin: 20px; padding: 10px 20px; color: #7f8c8d; font-size: 14px; }
+.qr-code { width: 80px; height: 80px; }
+.reg-number { font-weight: bold; font-size: 16px; color: #2c3e50; }
+
+@media print {
+  body { background-color: #fff; }
+  .certificate-container { box-shadow: none; margin: 0; }
+
+  /* Print-friendly watermark */
   .certificate-container::before {
-    content: "";
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    width: 400px;
-    height: 400px;
-    transform: translate(-50%, -50%);
-    background-image: url('https://raw.githubusercontent.com/gpiasiatel/gpiasiatel/main/foldername/WhatsApp_Image_2025-08-28_at_3.14.15_PM-removebg-preview.png');
-    background-repeat: no-repeat;
-    background-position: center;
-    background-size: contain;
-    opacity: 0.12;
-    z-index: 0;
+      content: "";
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      width: 500px;
+      height: 500px;
+      transform: translate(-50%, -50%) rotate(-15deg);
+      background-image: url('https://raw.githubusercontent.com/gpiasiatel/gpiasiatel/main/foldername/WhatsApp_Image_2025-08-28_at_3.14.15_PM-removebg-preview.png');
+      background-repeat: no-repeat;
+      background-position: center;
+      background-size: contain;
+      opacity: 0.05; /* subtle but visible in print */
+      z-index: 0;
   }
 
   .certificate-container > * { position: relative; z-index: 1; }
+  #loader, .not-found { display: none; }
+}
 
-  .cert-header { background-color: #2c3e50; padding: 20px; text-align: center; }
-  .company-logo { max-height: 80px; object-fit: contain; }
-
-  .cert-body { display: flex; align-items: center; padding: 30px 20px; gap: 20px; flex-wrap: wrap; }
-  .profile-picture-container { flex: 0 0 150px; text-align: center; }
-  .profile-picture { width: 150px; height: 150px; border-radius: 50%; object-fit: cover; border: 3px solid #2980b9; }
-
-  .person-info { flex: 1; text-align:left; }
-
-  .person-info .name { font-size: 28px; margin: 0; color: #2c3e50; font-weight: bold; }
-  .person-info .designation { font-size: 20px; margin: 5px 0; color: #2980b9; }
-  .person-info .company { font-size: 18px; color: #555; }
-
-  .cert-details { margin: 20px; padding: 10px; }
-  .detail-item { padding: 10px 0; border-bottom: 1px dashed #bdc3c7; font-size: 16px; display:flex; justify-content:space-between; }
-  .detail-key { font-weight: bold; color: #34495e; }
-  .detail-value { color: #2c3e50; }
-
-  .cert-footer { display: flex; justify-content: space-between; align-items: center; margin: 20px; padding: 10px 20px; color: #7f8c8d; font-size: 14px; }
-  .qr-code { width: 80px; height: 80px; }
-  .reg-number { font-weight: bold; font-size: 16px; color: #2c3e50; }
-
-  @media print {
-    body { background-color: #fff; }
-    .certificate-container { box-shadow: none; margin: 0; }
-    #loader, .not-found { display: none; }
-  }
-
-  @media (max-width: 600px) {
-    .cert-body { flex-direction: column; align-items: center; text-align: center; }
-    .person-info { text-align: center; }
-    .cert-footer { flex-direction: column; gap: 10px; align-items: center; }
-    .detail-item { flex-direction: column; text-align:center; }
-  }
+@media (max-width: 600px) {
+  .cert-body { flex-direction: column; align-items: center; text-align: center; }
+  .person-info { text-align: center; }
+  .cert-footer { flex-direction: column; gap: 10px; align-items: center; }
+  .detail-item { flex-direction: column; text-align:center; }
+}
 </style>
 </head>
 <body>
